...
        android:id="@+id/mapFragmentMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/mapButtonGoToSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
...
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/biege"
        android:text="Notifcation Center" />

    <Button
        android:id="@+id/mapButtonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/dark_red"
        android:text="Log Out" />
...
