...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpEditTextUsername"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/signUpTextViewErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="23dp"
        android:textColor="#E40505"
        app:layout_constraintBottom_toTopOf="@+id/userProfileImageViewAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEditTextPassword" />

    <ImageView
        android:id="@+id/userProfileImageViewAvatar"
...
