<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/bookingListView"
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="112dp" />

    <Button
        android:id="@+id/bookingButtonBacktoMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Back to Map" />

    <TextView
        android:id="@+id/bookingTextViewCenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="260dp"
        android:layout_marginTop="20dp"
        android:text="" />

    <Button
        android:id="@+id/bookingButtonPrevDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/light_blue"
        android:text="Prev" />

    <Button
        android:id="@+id/bookingButtonNextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/light_blue"
        android:text="Next" />

    <TextView
        android:id="@+id/bookingTextViewSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="165dp"
        android:layout_marginTop="75dp"
        android:text="yyyy/MM/dd" />
</RelativeLayout>