<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="55dp"
    android:layout_marginTop="50dp"
    android:weightSum="100">

    <Button
        android:id="@+id/timeSlotAdapterButtonBook"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="66.6"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text=" Book " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeslotAdapterTextViewDate"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="March 17, 2022" />

        <TextView
            android:id="@+id/timeslotAdapterTextViewCenter"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="Lyon Center" />

        <TextView
            android:id="@+id/timeslotAdapterTextViewTimeIndex"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="8:00-10:00AM" />

    </LinearLayout>

</LinearLayout>
